# kinematics

./: CMakeLists.txt  package.xml
config/: robot_arm.yaml
include/robotics1/: tf.h
launch/: tf.launch
rviz/: config.rviz
scripts/: params.py
src/: main.cpp  tf.cpp  tree.cpp
