<package format='2'>
  <name>robotics</name>
  <version>1.0.0</version>
  <description>
  This package contains the introduction to robotics 
  </description>
  <maintainer email="praneeth.pep@gmail.com">kvk praneeth</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rviz</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>geometry_msgs</depend>

  <depend>rosparam</depend>

</package>
